# graduation-project

./: README.md  map.pgm  map.yaml
my_ros2_ws/src/tb4_nav_pkg/: package.xml  setup.cfg  setup.py
my_ros2_ws/src/tb4_nav_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_ros2_ws/src/tb4_nav_pkg/log/: latest_build
my_ros2_ws/src/tb4_nav_pkg/tb4_nav_pkg/: nav_action_server.py  tb4_nav.py  vosk_arm.py
omx_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
omx_ws/log/: latest_build
omx_ws/src/open_manipulator/install/: local_setup.sh  setup.sh
omx_ws/src/open_manipulator/open_manipulator_x_teleop/: setup.py
omx_ws/src/robotis_manipulator/: CMakeLists.txt
ros/humble/: local_setup.sh  setup.sh
ros/humble/cmake/: yamlTargets.cmake
ros/humble/include/tf2_sensor_msgs/: tf2_sensor_msgs.hpp
ros/humble/lib/: libfastcdr.so.1  libfastcdr.so.1.0.24  libfastrtps.so.2.6
ros/humble/lib/action_tutorials_cpp/: fibonacci_action_client  fibonacci_action_server
ros/humble/lib/action_tutorials_py/: fibonacci_action_client  fibonacci_action_server
ros/humble/lib/composition/: dlopen_composition  linktime_composition  manual_composition
ros/humble/lib/demo_nodes_cpp/: add_two_ints_client  talker  (+21 more)
ros/humble/share/simple_term_menu_vendor/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
ros/humble/share/simple_term_menu_vendor/cmake/: simple_term_menu_vendorConfig-version.cmake  simple_term_menu_vendorConfig.cmake
turtlebot4_navigation/: local_setup.sh  package.xml
turtlebot4_navigation/config/: nav2.yaml
(+2794 files in other folders)
