<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_term_menu_vendor</name>
  <version>1.5.7</version>
  <description>A Python package which creates simple interactive menus on the command line.</description>
  <author email="i.meyer@fz-juelich.de">Ingo Meyer</author>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
